--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "eframe_template"
+name = "launcher"
 version = "0.1.0"
-authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
+authors = ["Georgii Imeshkenov <georgiiimeshkenov@gmail.com>"]
 edition = "2021"
 rust-version = "1.71"
 
@@ -18,6 +18,15 @@ log = "0.4"
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
+websocket = "0.27.0"
+serde_json = "1.0.107"
+uuid = "1.4.1"
+aes = "0.8.3"
+hex = "0.4.3"
+base64 = "0.21.5"
+block-modes = "0.9.1"
+cipher = "0.4.4"
+libaes = "0.7.0"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
